<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Media Mover (WhatsApp)</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Data Moving</string>
    <string name="slide_1_desc">From One Click You Can Move Your Data To SD Card</string>

    <string name="slide_2_title">Data Copying</string>
    <string name="slide_2_desc">From One Click You Can Copy Your Data To SD Card</string>

    <string name="slide_3_title">Data Remove</string>
    <string name="slide_3_desc">From One Click You Can Remove Your Data </string>

    <string name="slide_4_title">Data Restore</string>
    <string name="slide_4_desc">From One Click You Can Restore Your Data To Main Storage</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main__navigation__class">Main_Navigation_Class</string>
    <string name="title_activity_main__navigation">Home</string>
    <string name="nav_header_title">Media Mover</string>
    <string name="share_info">Hey check This App which help you to move your Whatsapp data to Sd Card(No Rooted Required) fast and easy way - </string>

    // changes options
    <string name="normal_Changes">Normal</string>
    <string name="deep_Changes">Deep</string>
    <string name="changes_Options">Changes Option</string>
    <string name="make_A_Change">Make a Change</string>
    <string name="select_The_Time">Select The Time</string>

    // Spinner
    <string name="spinner_title">Select The Time</string>

    //setting heading
    <string name="Choose_Your_Whatsapp">Choose Your Whatsapp</string>
    <string name="foreground_Setting">Foreground Service</string>
    <string name="Choose_Ok">OK</string>
    <string name="Choose_Cancel">Cancel</string>
    <string name="setting_Heading">Setting</string>

    // menu navigation heading
    <string name="nav_Home">Home</string>
    <string name="nav_Transfer_Data">Transfer Data</string>
    <string name="nav_Duplicate_Data">Duplicate Data</string>
    <string name="nav_background_Timer">Background Timer</string>
    <string name="nav_Whatsapp_Setting">Whatsapp Setting</string>
    <string name="nav_Foreground_Setting">Foreground Setting</string>
    <string name="nav_share">share</string>
    <string name="nav_Rate_Us">Rate Us</string>
    <string name="nav_Contact_Me">Contact Me</string>

    // Notfication CHannel Name
    <string name="transfer_title">Transfer</string>
    <string name="transfer_Id">Transfer Id </string>
    <string name="transfer_Done_title">Transfer Done</string>
    <string name="transfer_Done_Id">Transfer Done Id </string>
    <string name="duplicate_title">Duplicate</string>
    <string name="duplicate_Id">Duplicate Id </string>
    <string name="duplicate_Done_title">Duplicate Done</string>
    <string name="duplicate_Done_Id">Duplicate Done Id </string>

    <!-- shared Preference -->

    <!--whatsApp path setting -->
    <string name="MY_PREFS_NAME">WhatsApp Media Mover</string>
    <string name="keyValue">WhatsApp_Path</string>
    <string name="background_Service_Working">Background Service Working</string>
    <string name="foreground_Service_Working">Foreground Service Working</string>
    <string name="task_A_NextDate">Task A NextDate</string>
    <string name="task_B_NextDate">Task B NextDate</string>
    <string name="task_C_NextDate">Task C NextDate</string>
    <string name="task_A_Done">Task A Done</string>
    <string name="task_B_Done">Task B Done</string>
    <string name="task_C_Done">Task C Done</string>


    <!--first time check flash screen-->
    <string name="isFirstTimeLaunch">Is First Time Launch</string>

    <!-- tick_icon on button array -->
    <string name="sdCardPath">Sd Card Path</string>

    <!--Sd Card Path-->
    <string name="stringUri">String URI</string>
    <string name="timer_icon">Timer icon</string>

    <!--image Descrption-->
    <string name="endlessly_Date">Endlessly</string>

    <!--Background Timer-->
    <string name="repeatedly_Text">Repeatedly Timer</string>
    <string name="background_Timer_Heading">What You Like ?</string>
    <string name="today_Date">Today</string>

    <!--custom weekdays Setup-->
    <string name="yesterday_Date">Yesterday</string>

    <!--custom Chooser Setup-->
    <string name="tomorrow_Date">Tomorrow</string>

    <!--Default Date-->
    <string name="setting_Updated">Setting Updated</string>
    <string name="notify_Notification">Notify Notification</string>
    <string name="size_Of_Whatsapp">Size Of Whatsapp</string>


    <!--setting updated-->
    <string name="fallBackError">Someting Went Wrong Please Contact Us !</string>


    <!--Notification-->
    <string name="stop_Foreground_Service">Stop Service</string>
    <string name="why_This_Foreground_Service">Why This ? </string>

    <!-- Fallback Error -->
    <string name="custom_Foreground_Permission">Smart phone are more restrict about background Process from which our background task not working So if you want to us to run background task
        follow the steps which is given on that Website .</string>

    <!--setting Foreground Service-->
    <string name="custom_Foreground_Permission_Follow">Follow It</string>
    <string name="custom_Dialog_Box_Heading">Foreground Service</string>

    <string name="custom_Dialog_Box_Text">Are you sure to stop all your background Task?</string>
    <string name="errorMes">Please Select the Sd Card Root Directory</string>

    <string name="nothing_text">Nothing!!</string>
    <string name="noFileFoundText">There is no File Found.</string>
    <string name="noDuplicateFoundText">There is no Duplicate File Found.</string>

    <!--Error Message-->
    <string name="shortAppName">Media Mover</string>

    <string name="title_activity_interstitial_add">InterstitialAdd</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-9530958250183062/1224167747</string>
    <string name="title_activity_interstitial_ad">InterstitialAd</string>
    <string name="title_activity_interstitial_ads">InterstitialAds</string>
    <string name="delete_text">\u0010 Delete</string>
    <string name="scan_text">\u0010 Scan</string>

    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string-array name="arrayTick">
        <item>Tick Audio ImageView</item>
        <item>Tick Video ImageView</item>
        <item>Tick Document ImageView</item>
        <item>Tick Image ImageView</item>
        <item>Tick Gif ImageView</item>
        <item>Tick Voice ImageView</item>
        <item>Tick Profile ImageView</item>
        <item>Tick Sticker ImageView</item>
        <item>Tick Database ImageView</item>
    </string-array>
    <string-array name="customWeekdaysSetup">
        <item tools:ignore="TypographyFractions">At Every 1/2 Day</item>
        <item>At Every 1 Day</item>
        <item>At Every 2 Day</item>
        <item>Custom WeekDay</item>
        <item>Once A Month(Same Date)</item>
    </string-array>
    <string-array name="customChooserSetup">
        <item>No Process</item>
        <item>Move Data</item>
        <item>Copy Data</item>
        <item>Remove Data</item>
        <item>Restore Data</item>
    </string-array>

    <!--    dialog more option-->
    <string name="option_fileName">File Name</string>
    <string name="option_openFile">Open File</string>
    <string name="option_viewFolder">View in folder</string>
    <string name="option_moreInfo">More Information</string>
    <!--Info Layout-->
    <string name="info_NameText">Name : </string>
    <string name="info_LocationText">Location : </string>
    <string name="info_SizeText">Size : </string>
    <string name="info_TypeText">Type : </string>
    <string name="info_ExtText">Ext : </string>
    <string name="info_CreatedText">Created : </string>
    <string name="open_text">Open</string>
</resources>
