<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/backgroundColor">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/back_Image_View_Change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="On_Click_Process"
                android:paddingEnd="10dp"
                app:srcCompat="@drawable/back_arrow_icon" />

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="90dp"
                android:fontFamily="serif"
                android:paddingEnd="30dp"
                android:text="@string/make_A_Change"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/head_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/changes_Options"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.029" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_Text_View"
        app:layout_constraintVertical_bias="0.082">

        <Button
            android:id="@+id/normal_Changes_Button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:alpha="1"
            android:background="@drawable/activity_my_move_button"
            android:drawableStart="@drawable/changes_whatsapp_icon"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="On_Click_Process"
            android:paddingEnd="5dp"
            android:paddingStart="12dp"
            android:text="@string/normal_Changes"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deep_Changes_Button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_Text_View"
            app:layout_constraintVertical_bias="0.058" />

        <Button
            android:id="@+id/deep_Changes_Button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:alpha="1"
            android:background="@drawable/activity_my_copy_button"
            android:drawableStart="@drawable/deep_changes_icon"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="On_Click_Process"
            android:paddingEnd="20dp"
            android:paddingStart="15dp"
            android:text="@string/deep_Changes"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/normal_Changes_Button"
            app:layout_constraintTop_toBottomOf="@+id/head_Text_View"
            app:layout_constraintVertical_bias="0.058" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>